nop kem bai find Max trong mang

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title>Find number in Array</title>
 </head>
 <body>
+<button onclick="findX()">Find X</button>
+<br><br>
+<button onclick="findMax()">Find Max</button>
 <script src="findingNumber.js"></script>
 </body>
 </html>
